[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Elements/MattePanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Popups/Addons/ItemInfo.gd" type="Script" id=2]
[ext_resource path="res://UI/Elements/SmallLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/UI/item_box.png" type="Texture" id=4]
[ext_resource path="res://assets/images/UI/coin_symbol.png" type="Texture" id=5]
[ext_resource path="res://UI/Elements/SmallButton.tscn" type="PackedScene" id=6]

[node name="ItemInfo" index="0" instance=ExtResource( 1 )]

margin_right = 188.0
margin_bottom = 296.0
rect_min_size = Vector2( 188, 296 )
script = ExtResource( 2 )
NamePath = NodePath("MarginContainer/VBoxContainer/Name")
IconPath = NodePath("MarginContainer/VBoxContainer/Icon")
DescriptionPath = NodePath("MarginContainer/VBoxContainer/Description")
ActionButtonPath = NodePath("MarginContainer/VBoxContainer/ActionButton")
PricePath = NodePath("MarginContainer/VBoxContainer/Price")

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 181.0
margin_bottom = 289.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 169.0
margin_bottom = 277.0
rect_min_size = Vector2( 160, 272 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" parent="MarginContainer/VBoxContainer" index="0" instance=ExtResource( 3 )]

margin_right = 164.0
margin_bottom = 16.0
size_flags_vertical = 1
text = "Item name"
align = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 164.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 6

[node name="Description" parent="MarginContainer/VBoxContainer" index="2" instance=ExtResource( 3 )]

margin_top = 102.0
margin_right = 164.0
margin_bottom = 175.0
size_flags_vertical = 2
text = "Item Description Item Description Item Description Item Description"
autowrap = true

[node name="Price" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 214.0
margin_right = 164.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 6
alignment = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Price" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="PriceLabel" parent="MarginContainer/VBoxContainer/Price" index="1" instance=ExtResource( 3 )]

margin_left = 22.0
margin_right = 54.0
margin_bottom = 16.0
size_flags_horizontal = 2
size_flags_vertical = 1
text = "Price"
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="ActionButton" parent="MarginContainer/VBoxContainer" index="4" instance=ExtResource( 6 )]

margin_top = 250.0
margin_right = 164.0
margin_bottom = 272.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/ActionButton" to="." method="_on_ActionButton_pressed"]


